--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,36 @@
 </head>
 <body>
 
+<header class="navbar navbar-inverse">
+	<div class="navbar-inner">
+		<ul class="nav pull-right span4	">
+			<li><%= link_to "Home", root_path %></li>
+			<% if user_signed_in? %>		
+				<li><%= link_to "Sign Out", signout_path, method: "delete" %></li>
+			<% end %>
+		</ul>
+	</div>
+</header>
 
-<div class="container">
+
+<div class="container-fluid">
+
 			<% flash.each do |key, value| %>
 				<%= content_tag(:div, value, class: "alert alert-#{key}") %>
 			<% end %>
 			<%= yield %>
+
 			<%= debug(params) if Rails.env.development? %>
 </div>
+
+
+<footer class="navbar navbar-fixed-bottom navbar-inverse">
+	<div class="navbar-inner">
+		<ul class="nav pull-right span4	">
+			<li><%= link_to "Home", root_path %></li>
+		</ul>
+	</div>
+</footer>
 
 </body>
 </html>
