--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 		<ul class="nav pull-right span4	">
 			<li><%= link_to "Home", root_path %></li>
 			<% if user_signed_in? %>		
+				<li><%= link_to "Users", users_path%></li>
 				<li><%= link_to "Sign Out", signout_path, method: "delete" %></li>
 			<% end %>
 		</ul>
