--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
-<div class="row-fluid"><%= @users.each do |user| %>
+<div class="row-fluid">
+	<%= @users.each do |user| %>
 		<h1><%= link_to user.username, user_path(user) %></h1>
 		<br>
 	<% end %>
