mousetrap gem etc

--- a/app/views/home_pages/home.html.erb
+++ b/app/views/home_pages/home.html.erb
@@ -4,6 +4,10 @@
 	<div class="hero-unit">
 		<div class="row-fluid">
 			<h1>Welcome to Twitterer.</h1>
+			<div class="offset1">
+				<p>A microblogging platform built with Rails.</p>
+				<p>Since Thu May 23 07:00:08 2013 -0400!</p>
+			</div>
 		</div>
 		<div class="row">
 			<div class="span4 well">
