--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
-<%= render 'tweet_box' %>
-
-<%= @user.username %>
-
-<% @tweets.each do |tweet| %>
-	<%= tweet.tweet %>
-<% end %>
+<div class="container">
+	<div class="span3">
+		<p><%= @user.username %></p>
+		<%= render 'tweet_box' %>
+	</div>
+	
+	<div class="offset3"><%= render 'timeline' %></div>
+</div>
