--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,5 +4,17 @@
 		<%= render 'tweet_box' %>
 	</div>
 	
-	<div class="offset3"><%= render 'timeline' %></div>
+	
+	<div class="span8 well">
+		<div class="content-main" id="timeline">
+			<div class="content-header">
+				<h4>Your Timeline</h4>
+			</div>
+			<ul>
+				<% @tweets.each do |tweet| %>
+					<img src="http://placekitten.com/50/50"><p>tweet</p>
+				<% end %>
+			</ul>
+		</div>
+	</div>
 </div>
