--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,13 @@
 @import "bootstrap";
 
-#submit-button {
-	
+@media (min-width: 980px) {
+  body {
+    padding-top: 60px;
+    padding-bottom: 42px;
+  }
 }
+
+.avatar {
+	float: left;
+}
+
