--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>Twitterer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<header class="navbar navbar-inverse">
+<header class="navbar navbar-inverse navbar-fixed-top">
 	<div class="navbar-inner">
 		<ul class="nav pull-right span4	">
 			<li><%= link_to "Home", root_path %></li>
@@ -31,14 +32,6 @@
 			<%= debug(params) if Rails.env.development? %>
 </div>
 
-
-<footer class="navbar navbar-fixed-bottom navbar-inverse">
-	<div class="navbar-inner">
-		<ul class="nav pull-right span4	">
-			<li><%= link_to "Home", root_path %></li>
-		</ul>
-	</div>
-</footer>
 
 </body>
 </html>
