--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,46 @@
 <div class="container">
-	<div class="span3">
-		<p><%= @user.username %></p>
-		<% if @user == current_user %>
-			<%= render 'tweet_box' %>
-		<% else %>
+	<div class="row-fluid">
+		<div class="span12">
+			<div class="span3">
+				<p><%= @user.username %></p>
+				<% if @user == current_user %>
+					<%= render 'tweet_box' %>
+				<% else %>
+					<% unless current_user.following?(@user) %>		
+						<%= render 'follow_button'  %>
+					<% else %>
+						<%= render 'unfollow_button' %>
+					<% end %>
+					
 			
-			<%= form_tag("/relationships") do %>
-				
-				<%= submit_tag 'Follow', class: "btn btn-large btn-primary",  data: { keybinding: '[command+enter]' } %>
-			<% end %>
-
-		<% end %>
-	</div>
-	
-	
-	<div class="span8 well">
-		<div class="content-main" id="timeline">
-			<div class="content-header">
-				<h4>Your Timeline</h4>
-			</div>
-			<ul>
-				<% @tweets.each do |tweet| %>
-					<img src="http://placekitten.com/50/50"><p>tweet</p>
 				<% end %>
-			</ul>
+					<div id="followers"></div>
+			</div>
+			
+			
+			<div class="span9 well well-small">
+				<div class="content-main" id="timeline">
+					<div class="content-header">
+						<h4>Your Timeline</h4>
+					</div>
+					<ul>
+						<div class="media">
+							<% @tweets.each do |tweet| %>
+										<a class="pull-left">
+											<img src="http://placekitten.com/50/50" class="img-rounded media-object">
+										</a>
+										<div class="media-body">
+											<div class="media-heading">
+												<p><%= tweet.tweet %></p>
+											</div>
+										</div>
+										<button class="close">&times;</button>
+										<br>
+							<% end %>
+						</div>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
