--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
 
 <header class="navbar navbar-inverse navbar-fixed-top">
 	<div class="navbar-inner">
-		<ul class="nav pull-right span4	">
-			<li><%= link_to "Home", root_path %></li>
+		<ul class="nav pull-right span4	menu">
 			<% if user_signed_in? %>		
+				<li><%= link_to "Home", user_path(current_user) %></li>
 				<li><%= link_to "Users", users_path%></li>
 				<li><%= link_to "Sign Out", signout_path, method: "delete" %></li>
 			<% end %>
