--- a/app/views/users/_unfollow_button.html.erb
+++ b/app/views/users/_unfollow_button.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag("/relationships/#{@user.id}", id: "unfollow_button", method: :delete, remote: true) do %>
+<%= form_tag("/relationships/#{@user.id}", id: "unfollow_button", method: :delete) do %>
 	<%= hidden_field_tag :followed_id, @user.id %>
 	<%= submit_tag 'Unfollow', class: "btn btn-large btn-danger",  data: { keybinding: '[command+enter]' } %>
 <% end %>
