--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,10 +3,10 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
   <div><%= f.label :name %>
-  <%= f.email_field :name, :autofocus => true %></div>
+  <%= f.text_field :name, :autofocus => true %></div>
 
   <div><%= f.label :username %>
-  <%= f.email_field :username %></div>
+  <%= f.text_field :username %></div>
 
   <div><%= f.label :email %>
   <%= f.email_field :email %></div>
