edited captcha code

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,6 +17,8 @@
   <div><%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %></div>
 
+  <%= recaptcha_tags %>
+
   <div><%= f.submit "Sign up", class: "btn btn-large btn-primary" %></div>
 <% end %>
 
